# door_detector

./: .gitignore  LICENSE  README.md  app.py  finetuning.ipynb  model.py  mylogger.py  pyproject.toml  trainer.py  training_pytorch.ipynb  training_tensorflow.ipynb  utils.py
