[tool.poetry]
name = "door_detector"
version = "0.1.0"
description = "ML project - Detect and classify doors"
authors = ["Thomas Chaigneau <thomas.chaigneau@isen-ouest.yncrea.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.7.0"
tensorflow = "2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
